# personal-idit

./: .gitignore  LICENSE  README.md  pyproject.toml  test_idit.py
.github/workflows/: ci.yml
idit/: __init__.py  chain.py  cli.py  keys.py  server.py
